# fcnn_cuda

./: CMakeLists.txt  aliases.hpp  backend.h  backend_cpu.hpp  main.cu  operation.hpp  tensor.hpp
